fix: :bug: manejo de excepciones parte final